# C_lenet

./: CMakeLists.txt  README.md  cnnoperation.c  cnnoperation.h  improvedlenet5.c  improvedlenet5.h  matoperation.c  matoperation.h  mylenet.c
pytorch_lenet/: lenet20_param.txt  mylenet2.pt  pytorch0325lenet.ipynb
